@@ -7,6 +7,7 @@ import com.example.zipplz_be.domain.model.dto.ResponseDTO;
 import com.example.zipplz_be.domain.portfolio.dto.PortfolioViewDTO;
 import com.example.zipplz_be.domain.schedule.exception.S3Exception;
 import com.example.zipplz_be.domain.user.dto.CustomUserDetails;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.transaction.Transactional;
 import org.springframework.http.HttpStatus;
@@ -56,19 +57,19 @@ public class BoardController {
     // 질문글 추가하기
     @Transactional
     @PostMapping("/question/add")
-    public ResponseEntity<ResponseDTO<Boolean>> addQuestion(Authentication authentication, @RequestPart("images") List<MultipartFile> images, @RequestPart("params") String params) {
+    public ResponseEntity<ResponseDTO<Boolean>> addQuestion(Authentication authentication, @RequestPart("images") List<MultipartFile> images, @RequestPart("title") String title, @RequestPart("board_content") String board_content) {
         ResponseDTO<Boolean> responseDTO;
         HttpStatus status = HttpStatus.ACCEPTED;
 
         try {
             ObjectMapper objectMapper = new ObjectMapper();
-            Map<String, Object> paramsMap = objectMapper.readValue(params, Map.class);
+//            Map<String, Object> paramsMap = objectMapper.readValue(params, Map.class);
 
             CustomUserDetails customUserDetails = (CustomUserDetails) authentication.getPrincipal();
             int user_serial = customUserDetails.getUserSerial();
             int board_type = 1;
-            String title = (String) paramsMap.get("title");
-            String board_content = (String) paramsMap.get("board_content");
+//            String title = (String) paramsMap.get("title");
+//            String board_content = (String) paramsMap.get("board_content");
             LocalDateTime board_date = LocalDateTime.now();
             int hit = 0;
 
@@ -133,6 +134,7 @@ public class BoardController {
         HttpStatus status = HttpStatus.ACCEPTED;
 
         try {
+            boardService.updateboardhit(boardSerial);
             QuestionDetailDTO question= boardService.getQuestion(boardSerial);
 
             if (question == null) {
@@ -175,22 +177,44 @@ public class BoardController {
         return new ResponseEntity<>(responseDTO, status);
     }
 
+    // 질문글 검색
+    @GetMapping("/find/question/{search_content}")
+    public ResponseEntity<ResponseDTO<List<QuestionListDTO>>> findQuestionByContent(Authentication authentication, @PathVariable(value = "search_content") String search_content) {
+        ResponseDTO<List<QuestionListDTO>> responseDTO;
+        HttpStatus status = HttpStatus.ACCEPTED;
+
+        try {
+            int board_type = 1;
+            List<QuestionListDTO> questions = boardService.findQuestionsByContent(board_type, search_content);
+
+            if (questions == null) {
+                status = HttpStatus.NOT_FOUND;
+                responseDTO = new ResponseDTO<>(status.value(), "조회 실패 없음");
+            } else {
+                status = HttpStatus.OK;
+                responseDTO = new ResponseDTO<>(status.value(), "조회 성공", questions);
+            }
+        } catch (Exception e) {
+            status = HttpStatus.INTERNAL_SERVER_ERROR;
+            responseDTO = new ResponseDTO<>(status.value(), e.getMessage());
+        }
+        return new ResponseEntity<>(responseDTO, status);
+    }
+
     // 자랑글 추가하기
     @Transactional
     @PostMapping("/showoff/add")
-    public ResponseEntity<ResponseDTO<Boolean>> addShowBoard(Authentication authentication, @RequestPart("images") List<MultipartFile> images, @RequestPart("params") String params) {
+    public ResponseEntity<ResponseDTO<Boolean>> addShowBoard(Authentication authentication, @RequestPart("images") List<MultipartFile> images, @RequestPart("title") String title, @RequestPart("board_content") String board_content, @RequestPart("selected_portfolio") String viewsJson) {
         ResponseDTO<Boolean> responseDTO;
         HttpStatus status = HttpStatus.ACCEPTED;
 
         try {
             ObjectMapper objectMapper = new ObjectMapper();
-            Map<String, Object> paramsMap = objectMapper.readValue(params, Map.class);
+            List<PortfolioViewDTO> views = objectMapper.readValue(viewsJson, new TypeReference<List<PortfolioViewDTO>>(){});
 
             CustomUserDetails customUserDetails = (CustomUserDetails) authentication.getPrincipal();
             int user_serial = customUserDetails.getUserSerial();
             int board_type = 2;
-            String title = (String) paramsMap.get("title");
-            String board_content = (String) paramsMap.get("board_content");
             LocalDateTime board_date = LocalDateTime.now();
             int hit = 0;
             int addBoard_result = boardService.addBoard(user_serial, board_type, title, board_content, board_date, hit);
@@ -200,23 +224,12 @@ public class BoardController {
                 status = HttpStatus.NOT_FOUND;
                 responseDTO = new ResponseDTO<>(status.value(), "자랑글 삽입 실패");
             } else {
-                List<?> rawViews = (List<?>) paramsMap.get("selected_portfolio");
-
-                List<PortfolioViewDTO> views = rawViews.stream()
-                        .map(item -> {
-                            LinkedHashMap<String, Object> map = (LinkedHashMap<String, Object>) item;
-                            PortfolioViewDTO dto = new PortfolioViewDTO();
-                            dto.setPortfolio_serial((Integer) map.get("portfolio_serial"));
-                            return dto;
-                        })
-                        .collect(Collectors.toList());
-
                 int addWorkToPortfolio_result = boardService.addBoardToPortfolio(board_serial, views);
                 if (addWorkToPortfolio_result == 0) {
                     status = HttpStatus.NOT_FOUND;
                     responseDTO = new ResponseDTO<>(status.value(), "관계 시공자 삽입 실패");
                 } else {
-                    if (!images.isEmpty() && images.get(0).getSize() != 0) {
+                    if (!images.isEmpty() && images.getFirst().getSize() != 0) {
                         int file_result = boardService.uploadImageService(images, board_serial);
                         if (file_result == 0) {
                             status = HttpStatus.NOT_FOUND;
@@ -269,6 +282,7 @@ public class BoardController {
         HttpStatus status = HttpStatus.ACCEPTED;
 
         try {
+            boardService.updateboardhit(boardSerial);
             ShowBoardDetailDTO question= boardService.getShowBoard(boardSerial);
 
             if (question == null) {
@@ -311,22 +325,43 @@ public class BoardController {
         return new ResponseEntity<>(responseDTO, status);
     }
 
+    // 자랑글 검색
+    @GetMapping("/find/showboard/{search_content}")
+    public ResponseEntity<ResponseDTO<List<ShowBoardListDTO>>> findShowBoardByContent(Authentication authentication, @PathVariable(value = "search_content") String search_content) {
+        ResponseDTO<List<ShowBoardListDTO>> responseDTO;
+        HttpStatus status = HttpStatus.ACCEPTED;
+
+        try {
+            int board_type = 2;
+            List<ShowBoardListDTO> showboards = boardService.findShowBoardByContent(board_type, search_content);
+
+            if (showboards == null) {
+                status = HttpStatus.NOT_FOUND;
+                responseDTO = new ResponseDTO<>(status.value(), "조회 실패 없음");
+            } else {
+                status = HttpStatus.OK;
+                responseDTO = new ResponseDTO<>(status.value(), "조회 성공", showboards);
+            }
+        } catch (Exception e) {
+            status = HttpStatus.INTERNAL_SERVER_ERROR;
+            responseDTO = new ResponseDTO<>(status.value(), e.getMessage());
+        }
+        return new ResponseEntity<>(responseDTO, status);
+    }
+
     // 구인구직글 추가하기
     @Transactional
     @PostMapping("/findworker/add")
-    public ResponseEntity<ResponseDTO<Boolean>> addFindWorker(Authentication authentication, @RequestPart("images") List<MultipartFile> images, @RequestPart("params") String params) {
+    public ResponseEntity<ResponseDTO<Boolean>> addFindWorker(Authentication authentication, @RequestPart("images") List<MultipartFile> images, @RequestPart("title") String title, @RequestPart("board_content") String board_content) {
         ResponseDTO<Boolean> responseDTO;
         HttpStatus status = HttpStatus.ACCEPTED;
 
         try {
             ObjectMapper objectMapper = new ObjectMapper();
-            Map<String, Object> paramsMap = objectMapper.readValue(params, Map.class);
 
             CustomUserDetails customUserDetails = (CustomUserDetails) authentication.getPrincipal();
             int user_serial = customUserDetails.getUserSerial();
             int board_type = 3;
-            String title = (String) paramsMap.get("title");
-            String board_content = (String) paramsMap.get("board_content");
             LocalDateTime board_date = LocalDateTime.now();
             int hit = 0;
 
@@ -388,6 +423,7 @@ public class BoardController {
         HttpStatus status = HttpStatus.ACCEPTED;
 
         try {
+            boardService.updateboardhit(boardSerial);
             FindWorkerDetailDTO findworker= boardService.getFindWorker(boardSerial);
 
             if (findworker == null) {
@@ -430,9 +466,33 @@ public class BoardController {
         return new ResponseEntity<>(responseDTO, status);
     }
 
-    // 구인구직글 수정하기
+    // 구인구직글 검색
+    @GetMapping("/find/findworker/{search_content}")
+    public ResponseEntity<ResponseDTO<List<FindWorkerListDTO>>> findFindWorkerByContent(Authentication authentication, @PathVariable(value = "search_content") String search_content) {
+        ResponseDTO<List<FindWorkerListDTO>> responseDTO;
+        HttpStatus status = HttpStatus.ACCEPTED;
+
+        try {
+            int board_type = 3;
+            List<FindWorkerListDTO> findworkers = boardService.findFindWorkerByContent(board_type, search_content);
+
+            if (findworkers == null) {
+                status = HttpStatus.NOT_FOUND;
+                responseDTO = new ResponseDTO<>(status.value(), "조회 실패 없음");
+            } else {
+                status = HttpStatus.OK;
+                responseDTO = new ResponseDTO<>(status.value(), "조회 성공", findworkers);
+            }
+        } catch (Exception e) {
+            status = HttpStatus.INTERNAL_SERVER_ERROR;
+            responseDTO = new ResponseDTO<>(status.value(), e.getMessage());
+        }
+        return new ResponseEntity<>(responseDTO, status);
+    }
+
+    // 게시글 삭제하기
     @DeleteMapping("/delete/{boardSerial}")
-    public ResponseEntity<ResponseDTO<Boolean>> modifyFindWorker(Authentication authentication, @PathVariable(value = "boardSerial") int boardSerial) {
+    public ResponseEntity<ResponseDTO<Boolean>> deleteBoard(Authentication authentication, @PathVariable(value = "boardSerial") int boardSerial) {
         ResponseDTO<Boolean> responseDTO;
         HttpStatus status = HttpStatus.ACCEPTED;
 
